// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`WorkbenchFooter — snapshots should match snapshot for all props set (maximal state) 1`] = `
<footer
  class="h-6 border-t wb-outline wb-surface flex items-center justify-between px-4 z-50 shrink-0 transition-colors duration-500 select-none"
  role="contentinfo"
>
  <div
    class="flex items-center gap-3 text-[7px] font-mono uppercase tracking-[0.2em] text-foreground/20 min-w-0"
  >
    <span
      class="text-primary/40 font-black whitespace-nowrap"
    >
      Build v8.0.0
    </span>
    <span
      class="opacity-50 shrink-0"
    >
      //
    </span>
    <div
      class="flex items-center gap-2 text-primary animate-in fade-in duration-500 whitespace-nowrap"
    >
      <span
        class="w-1 h-1 rounded-full bg-primary shadow-[0_0_5px_rgba(0,240,255,1)] animate-pulse"
      />
      <span
        class="font-black hidden md:inline"
      >
        WATCHDOG SYNC ACTIVE
      </span>
      <span
        class="opacity-40 italic hidden lg:inline"
      >
        @ 
        14:30:00
      </span>
    </div>
    <span
      class="opacity-50 shrink-0"
    >
      //
    </span>
    <div
      class="flex items-center gap-1.5 text-primary border border-primary/20 bg-primary/5 rounded-xs px-1.5 py-0.5 shadow-[0_0_6px_rgba(var(--primary-rgb),0.1)] whitespace-nowrap"
    >
      <span
        class="text-[6px] font-black uppercase tracking-widest"
      >
        [A] Add
      </span>
    </div>
  </div>
  <div
    class="flex items-center justify-center gap-1 shrink-0"
  >
    <div
      class="flex items-center wb-surface border wb-outline rounded-xs p-0.5 pointer-events-auto h-5 bg-black/40"
    >
      <button
        aria-label="Orbital View (Ctrl+1)"
        aria-pressed="false"
        class="flex items-center justify-center rounded-xs transition-all w-5 h-4 wb-text-muted hover:wb-text  "
        title="Orbital View (Ctrl+1)"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-layers w-2.5 h-2.5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12.83 2.18a2 2 0 0 0-1.66 0L2.6 6.08a1 1 0 0 0 0 1.83l8.58 3.91a2 2 0 0 0 1.66 0l8.58-3.9a1 1 0 0 0 0-1.83z"
          />
          <path
            d="M2 12a1 1 0 0 0 .58.91l8.6 3.91a2 2 0 0 0 1.65 0l8.58-3.9A1 1 0 0 0 22 12"
          />
          <path
            d="M2 17a1 1 0 0 0 .58.91l8.6 3.91a2 2 0 0 0 1.65 0l8.58-3.9A1 1 0 0 0 22 17"
          />
        </svg>
      </button>
      <button
        aria-label="Virtual Rack (Ctrl+2)"
        aria-pressed="true"
        class="flex items-center justify-center rounded-xs transition-all w-5 h-4 bg-primary/20 text-primary border border-primary/20 "
        title="Virtual Rack (Ctrl+2)"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-cpu w-2.5 h-2.5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 20v2"
          />
          <path
            d="M12 2v2"
          />
          <path
            d="M17 20v2"
          />
          <path
            d="M17 2v2"
          />
          <path
            d="M2 12h2"
          />
          <path
            d="M2 17h2"
          />
          <path
            d="M2 7h2"
          />
          <path
            d="M20 12h2"
          />
          <path
            d="M20 17h2"
          />
          <path
            d="M20 7h2"
          />
          <path
            d="M7 20v2"
          />
          <path
            d="M7 2v2"
          />
          <rect
            height="16"
            rx="2"
            width="16"
            x="4"
            y="4"
          />
          <rect
            height="8"
            rx="1"
            width="8"
            x="8"
            y="8"
          />
        </svg>
      </button>
      <button
        aria-label="Source View (Ctrl+3)"
        aria-pressed="false"
        class="flex items-center justify-center rounded-xs transition-all w-5 h-4 wb-text-muted hover:wb-text  "
        title="Source View (Ctrl+3)"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-file-code w-2.5 h-2.5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M6 22a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h8a2.4 2.4 0 0 1 1.704.706l3.588 3.588A2.4 2.4 0 0 1 20 8v12a2 2 0 0 1-2 2z"
          />
          <path
            d="M14 2v5a1 1 0 0 0 1 1h5"
          />
          <path
            d="M10 12.5 8 15l2 2.5"
          />
          <path
            d="m14 12.5 2 2.5-2 2.5"
          />
        </svg>
      </button>
      <button
        aria-label="Timeline / History (Ctrl+4)"
        aria-pressed="false"
        class="flex items-center justify-center rounded-xs transition-all w-5 h-4 wb-text-muted hover:wb-text  "
        title="Timeline / History (Ctrl+4)"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-history w-2.5 h-2.5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3 12a9 9 0 1 0 9-9 9.75 9.75 0 0 0-6.74 2.74L3 8"
          />
          <path
            d="M3 3v5h5"
          />
          <path
            d="M12 7v5l4 2"
          />
        </svg>
      </button>
      <div
        class="w-px h-3 bg-white/10 mx-1"
      />
      <button
        aria-label="Toggle Split View (Vertical)"
        aria-pressed="true"
        class="flex items-center justify-center rounded-xs transition-all w-5 h-4 bg-primary/20 text-primary border border-primary/20 "
        title="Toggle Split View (Vertical)"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-columns2 lucide-columns-2 w-2.5 h-2.5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            height="18"
            rx="2"
            width="18"
            x="3"
            y="3"
          />
          <path
            d="M12 3v18"
          />
        </svg>
      </button>
      <button
        aria-label="Toggle Mini Map (Ctrl+Shift+M)"
        aria-pressed="true"
        class="flex items-center justify-center rounded-xs transition-all w-5 h-4 bg-primary/20 text-primary border border-primary/20 "
        title="Toggle Mini Map (Ctrl+Shift+M)"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-map w-2.5 h-2.5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M14.106 5.553a2 2 0 0 0 1.788 0l3.659-1.83A1 1 0 0 1 21 4.619v12.764a1 1 0 0 1-.553.894l-4.553 2.277a2 2 0 0 1-1.788 0l-4.212-2.106a2 2 0 0 0-1.788 0l-3.659 1.83A1 1 0 0 1 3 19.381V6.618a1 1 0 0 1 .553-.894l4.553-2.277a2 2 0 0 1 1.788 0z"
          />
          <path
            d="M15 5.764v15"
          />
          <path
            d="M9 3.236v15"
          />
        </svg>
      </button>
    </div>
  </div>
  <div
    aria-label="Status indicators"
    aria-live="polite"
    class="flex items-center justify-end gap-3 text-[7px] font-mono uppercase tracking-[0.2em] text-foreground/20 min-w-0"
    role="status"
  >
    <button
      aria-label="No history"
      class="flex items-center gap-1.5 px-1.5 py-0.5 rounded-xs transition-all text-white/10 cursor-not-allowed"
      disabled=""
      title="No history"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-undo2 lucide-undo-2 w-2.5 h-2.5"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9 14 4 9l5-5"
        />
        <path
          d="M4 9h10.5a5.5 5.5 0 0 1 5.5 5.5a5.5 5.5 0 0 1-5.5 5.5H11"
        />
      </svg>
    </button>
    <div
      class="flex items-center gap-1 shrink-0 overflow-hidden"
    >
      <button
        aria-label="Undo (Ctrl+Z)"
        class="flex items-center gap-1 px-1 py-0.5 rounded-xs border text-[6px] font-mono font-bold tracking-wider shrink-0 transition-all border-white/5 bg-transparent text-white/10 cursor-not-allowed"
        disabled=""
        title="Undo (Ctrl+Z)"
      >
        <kbd
          class="text-[5px] px-0.5 py-px rounded-[1px] bg-white/10 text-white/40 font-mono font-black uppercase leading-none"
        >
          Ctrl
        </kbd>
        <span
          class="text-white/20"
        >
          +
        </span>
        <kbd
          class="text-[5px] px-0.5 py-px rounded-[1px] bg-white/10 text-white/40 font-mono font-black uppercase leading-none"
        >
          Z
        </kbd>
      </button>
      <button
        aria-label="Redo (Ctrl+Shift+Z)"
        class="hidden md:flex items-center gap-1 px-1 py-0.5 rounded-xs border text-[6px] font-mono font-bold tracking-wider shrink-0 transition-all border-white/5 bg-transparent text-white/10 cursor-not-allowed"
        disabled=""
        title="Redo (Ctrl+Shift+Z)"
      >
        <kbd
          class="text-[5px] px-0.5 py-px rounded-[1px] bg-white/10 text-white/40 font-mono font-black uppercase leading-none"
        >
          Ctrl
        </kbd>
        <span
          class="text-white/20"
        >
          +
        </span>
        <kbd
          class="text-[5px] px-0.5 py-px rounded-[1px] bg-white/10 text-white/40 font-mono font-black uppercase leading-none"
        >
          Shift
        </kbd>
        <span
          class="text-white/20"
        >
          +
        </span>
        <kbd
          class="text-[5px] px-0.5 py-px rounded-[1px] bg-white/10 text-white/40 font-mono font-black uppercase leading-none"
        >
          Z
        </kbd>
      </button>
      <button
        aria-label="Command Palette (Ctrl+K)"
        class="flex items-center gap-1 px-1 py-0.5 rounded-xs border text-[6px] font-mono font-bold tracking-wider shrink-0 transition-all border-white/10 bg-white/5 text-white/30 hover:bg-white/10 hover:text-white/50"
        title="Command Palette (Ctrl+K)"
      >
        <kbd
          class="text-[5px] px-0.5 py-px rounded-[1px] bg-white/10 text-white/40 font-mono font-black uppercase leading-none"
        >
          Ctrl
        </kbd>
        <span
          class="text-white/20"
        >
          +
        </span>
        <kbd
          class="text-[5px] px-0.5 py-px rounded-[1px] bg-white/10 text-white/40 font-mono font-black uppercase leading-none"
        >
          K
        </kbd>
      </button>
      <button
        aria-label="Save OmegaPack (Ctrl+S)"
        class="hidden md:flex items-center gap-1 px-1 py-0.5 rounded-xs border text-[6px] font-mono font-bold tracking-wider shrink-0 transition-all border-white/10 bg-white/5 text-white/30 hover:bg-white/10 hover:text-white/50"
        title="Save OmegaPack (Ctrl+S)"
      >
        <kbd
          class="text-[5px] px-0.5 py-px rounded-[1px] bg-white/10 text-white/40 font-mono font-black uppercase leading-none"
        >
          Ctrl
        </kbd>
        <span
          class="text-white/20"
        >
          +
        </span>
        <kbd
          class="text-[5px] px-0.5 py-px rounded-[1px] bg-white/10 text-white/40 font-mono font-black uppercase leading-none"
        >
          S
        </kbd>
      </button>
    </div>
    <span
      class="opacity-20 shrink-0"
    >
      |
    </span>
    <div
      class="flex items-center gap-1.5 text-amber-400/80 animate-in fade-in duration-300 whitespace-nowrap"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-circle w-2 h-2 fill-amber-400/60"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
      </svg>
      <span
        class="font-black"
      >
        Modified
      </span>
    </div>
    <span
      class="opacity-30 shrink-0"
    >
      |
    </span>
    <div
      class="flex items-center gap-1.5 whitespace-nowrap"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-triangle-alert w-2 h-2 text-red-400/80"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"
        />
        <path
          d="M12 9v4"
        />
        <path
          d="M12 17h.01"
        />
      </svg>
      <span
        class="text-red-400/80 font-black"
      >
        5
         error
        s
      </span>
      <span
        class="opacity-30"
      >
        /
      </span>
      <span
        class="text-amber-400/60 font-black"
      >
        3
         warning
        s
      </span>
    </div>
    <span
      class="opacity-30 shrink-0"
    >
      |
    </span>
    <div
      class="w-1.5 h-1.5 rounded-full border transition-all duration-500 shrink-0 bg-green-400/40 border-green-400/60 shadow-[0_0_6px_rgba(34,197,94,0.3)]"
      title="Watchdog connected"
    />
  </div>
</footer>
`;

exports[`WorkbenchFooter — snapshots should match snapshot for clean state with save timestamp, warnings only 1`] = `
<footer
  class="h-6 border-t wb-outline wb-surface flex items-center justify-between px-4 z-50 shrink-0 transition-colors duration-500 select-none"
  role="contentinfo"
>
  <div
    class="flex items-center gap-3 text-[7px] font-mono uppercase tracking-[0.2em] text-foreground/20 min-w-0"
  >
    <span
      class="text-primary/40 font-black whitespace-nowrap"
    >
      Build v8.0.0
    </span>
    <span
      class="opacity-50 shrink-0"
    >
      //
    </span>
    <span
      class="whitespace-nowrap"
    >
      Aseptic Standard
    </span>
  </div>
  <div
    class="flex items-center justify-center gap-1 shrink-0"
  >
    <div
      class="flex items-center wb-surface border wb-outline rounded-xs p-0.5 pointer-events-auto h-5 bg-black/40"
    >
      <button
        aria-label="Orbital View (Ctrl+1)"
        aria-pressed="false"
        class="flex items-center justify-center rounded-xs transition-all w-5 h-4 wb-text-muted hover:wb-text  "
        title="Orbital View (Ctrl+1)"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-layers w-2.5 h-2.5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12.83 2.18a2 2 0 0 0-1.66 0L2.6 6.08a1 1 0 0 0 0 1.83l8.58 3.91a2 2 0 0 0 1.66 0l8.58-3.9a1 1 0 0 0 0-1.83z"
          />
          <path
            d="M2 12a1 1 0 0 0 .58.91l8.6 3.91a2 2 0 0 0 1.65 0l8.58-3.9A1 1 0 0 0 22 12"
          />
          <path
            d="M2 17a1 1 0 0 0 .58.91l8.6 3.91a2 2 0 0 0 1.65 0l8.58-3.9A1 1 0 0 0 22 17"
          />
        </svg>
      </button>
      <button
        aria-label="Virtual Rack (Ctrl+2)"
        aria-pressed="true"
        class="flex items-center justify-center rounded-xs transition-all w-5 h-4 bg-primary/20 text-primary border border-primary/20 "
        title="Virtual Rack (Ctrl+2)"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-cpu w-2.5 h-2.5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 20v2"
          />
          <path
            d="M12 2v2"
          />
          <path
            d="M17 20v2"
          />
          <path
            d="M17 2v2"
          />
          <path
            d="M2 12h2"
          />
          <path
            d="M2 17h2"
          />
          <path
            d="M2 7h2"
          />
          <path
            d="M20 12h2"
          />
          <path
            d="M20 17h2"
          />
          <path
            d="M20 7h2"
          />
          <path
            d="M7 20v2"
          />
          <path
            d="M7 2v2"
          />
          <rect
            height="16"
            rx="2"
            width="16"
            x="4"
            y="4"
          />
          <rect
            height="8"
            rx="1"
            width="8"
            x="8"
            y="8"
          />
        </svg>
      </button>
      <button
        aria-label="Source View (Ctrl+3)"
        aria-pressed="false"
        class="flex items-center justify-center rounded-xs transition-all w-5 h-4 wb-text-muted hover:wb-text  "
        title="Source View (Ctrl+3)"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-file-code w-2.5 h-2.5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M6 22a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h8a2.4 2.4 0 0 1 1.704.706l3.588 3.588A2.4 2.4 0 0 1 20 8v12a2 2 0 0 1-2 2z"
          />
          <path
            d="M14 2v5a1 1 0 0 0 1 1h5"
          />
          <path
            d="M10 12.5 8 15l2 2.5"
          />
          <path
            d="m14 12.5 2 2.5-2 2.5"
          />
        </svg>
      </button>
      <button
        aria-label="Timeline / History (Ctrl+4)"
        aria-pressed="false"
        class="flex items-center justify-center rounded-xs transition-all w-5 h-4 wb-text-muted hover:wb-text  "
        title="Timeline / History (Ctrl+4)"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-history w-2.5 h-2.5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3 12a9 9 0 1 0 9-9 9.75 9.75 0 0 0-6.74 2.74L3 8"
          />
          <path
            d="M3 3v5h5"
          />
          <path
            d="M12 7v5l4 2"
          />
        </svg>
      </button>
      <div
        class="w-px h-3 bg-white/10 mx-1"
      />
      <button
        aria-label="Toggle Split View (Vertical)"
        aria-pressed="false"
        class="flex items-center justify-center rounded-xs transition-all w-5 h-4 wb-text-muted hover:wb-text  "
        title="Toggle Split View (Vertical)"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-columns2 lucide-columns-2 w-2.5 h-2.5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            height="18"
            rx="2"
            width="18"
            x="3"
            y="3"
          />
          <path
            d="M12 3v18"
          />
        </svg>
      </button>
      <button
        aria-label="Toggle Mini Map (Ctrl+Shift+M)"
        aria-pressed="true"
        class="flex items-center justify-center rounded-xs transition-all w-5 h-4 bg-primary/20 text-primary border border-primary/20 "
        title="Toggle Mini Map (Ctrl+Shift+M)"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-map w-2.5 h-2.5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M14.106 5.553a2 2 0 0 0 1.788 0l3.659-1.83A1 1 0 0 1 21 4.619v12.764a1 1 0 0 1-.553.894l-4.553 2.277a2 2 0 0 1-1.788 0l-4.212-2.106a2 2 0 0 0-1.788 0l-3.659 1.83A1 1 0 0 1 3 19.381V6.618a1 1 0 0 1 .553-.894l4.553-2.277a2 2 0 0 1 1.788 0z"
          />
          <path
            d="M15 5.764v15"
          />
          <path
            d="M9 3.236v15"
          />
        </svg>
      </button>
    </div>
  </div>
  <div
    aria-label="Status indicators"
    aria-live="polite"
    class="flex items-center justify-end gap-3 text-[7px] font-mono uppercase tracking-[0.2em] text-foreground/20 min-w-0"
    role="status"
  >
    <button
      aria-label="No history"
      class="flex items-center gap-1.5 px-1.5 py-0.5 rounded-xs transition-all text-white/10 cursor-not-allowed"
      disabled=""
      title="No history"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-undo2 lucide-undo-2 w-2.5 h-2.5"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9 14 4 9l5-5"
        />
        <path
          d="M4 9h10.5a5.5 5.5 0 0 1 5.5 5.5a5.5 5.5 0 0 1-5.5 5.5H11"
        />
      </svg>
    </button>
    <div
      class="flex items-center gap-1 shrink-0 overflow-hidden"
    >
      <button
        aria-label="Undo (Ctrl+Z)"
        class="flex items-center gap-1 px-1 py-0.5 rounded-xs border text-[6px] font-mono font-bold tracking-wider shrink-0 transition-all border-white/5 bg-transparent text-white/10 cursor-not-allowed"
        disabled=""
        title="Undo (Ctrl+Z)"
      >
        <kbd
          class="text-[5px] px-0.5 py-px rounded-[1px] bg-white/10 text-white/40 font-mono font-black uppercase leading-none"
        >
          Ctrl
        </kbd>
        <span
          class="text-white/20"
        >
          +
        </span>
        <kbd
          class="text-[5px] px-0.5 py-px rounded-[1px] bg-white/10 text-white/40 font-mono font-black uppercase leading-none"
        >
          Z
        </kbd>
      </button>
      <button
        aria-label="Redo (Ctrl+Shift+Z)"
        class="hidden md:flex items-center gap-1 px-1 py-0.5 rounded-xs border text-[6px] font-mono font-bold tracking-wider shrink-0 transition-all border-white/5 bg-transparent text-white/10 cursor-not-allowed"
        disabled=""
        title="Redo (Ctrl+Shift+Z)"
      >
        <kbd
          class="text-[5px] px-0.5 py-px rounded-[1px] bg-white/10 text-white/40 font-mono font-black uppercase leading-none"
        >
          Ctrl
        </kbd>
        <span
          class="text-white/20"
        >
          +
        </span>
        <kbd
          class="text-[5px] px-0.5 py-px rounded-[1px] bg-white/10 text-white/40 font-mono font-black uppercase leading-none"
        >
          Shift
        </kbd>
        <span
          class="text-white/20"
        >
          +
        </span>
        <kbd
          class="text-[5px] px-0.5 py-px rounded-[1px] bg-white/10 text-white/40 font-mono font-black uppercase leading-none"
        >
          Z
        </kbd>
      </button>
      <button
        aria-label="Command Palette (Ctrl+K)"
        class="flex items-center gap-1 px-1 py-0.5 rounded-xs border text-[6px] font-mono font-bold tracking-wider shrink-0 transition-all border-white/10 bg-white/5 text-white/30 hover:bg-white/10 hover:text-white/50"
        title="Command Palette (Ctrl+K)"
      >
        <kbd
          class="text-[5px] px-0.5 py-px rounded-[1px] bg-white/10 text-white/40 font-mono font-black uppercase leading-none"
        >
          Ctrl
        </kbd>
        <span
          class="text-white/20"
        >
          +
        </span>
        <kbd
          class="text-[5px] px-0.5 py-px rounded-[1px] bg-white/10 text-white/40 font-mono font-black uppercase leading-none"
        >
          K
        </kbd>
      </button>
      <button
        aria-label="Save OmegaPack (Ctrl+S)"
        class="hidden md:flex items-center gap-1 px-1 py-0.5 rounded-xs border text-[6px] font-mono font-bold tracking-wider shrink-0 transition-all border-white/10 bg-white/5 text-white/30 hover:bg-white/10 hover:text-white/50"
        title="Save OmegaPack (Ctrl+S)"
      >
        <kbd
          class="text-[5px] px-0.5 py-px rounded-[1px] bg-white/10 text-white/40 font-mono font-black uppercase leading-none"
        >
          Ctrl
        </kbd>
        <span
          class="text-white/20"
        >
          +
        </span>
        <kbd
          class="text-[5px] px-0.5 py-px rounded-[1px] bg-white/10 text-white/40 font-mono font-black uppercase leading-none"
        >
          S
        </kbd>
      </button>
    </div>
    <span
      class="opacity-20 shrink-0"
    >
      |
    </span>
    <div
      class="flex items-center gap-1.5 text-emerald-400/60 whitespace-nowrap"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-save w-2.5 h-2.5"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M15.2 3a2 2 0 0 1 1.4.6l3.8 3.8a2 2 0 0 1 .6 1.4V19a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2z"
        />
        <path
          d="M17 21v-7a1 1 0 0 0-1-1H8a1 1 0 0 0-1 1v7"
        />
        <path
          d="M7 3v4a1 1 0 0 0 1 1h7"
        />
      </svg>
      <span
        class="font-black"
      >
        Saved
      </span>
      <span
        class="opacity-40 italic hidden lg:inline"
      >
        @ 
        09:45:00
      </span>
    </div>
    <span
      class="opacity-30 shrink-0"
    >
      |
    </span>
    <div
      class="flex items-center gap-1.5 whitespace-nowrap"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-triangle-alert w-2 h-2 text-amber-400/60"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"
        />
        <path
          d="M12 9v4"
        />
        <path
          d="M12 17h.01"
        />
      </svg>
      <span
        class="text-amber-400/60 font-black"
      >
        4
         warning
        s
      </span>
    </div>
    <span
      class="opacity-30 shrink-0"
    >
      |
    </span>
    <div
      class="w-1.5 h-1.5 rounded-full border transition-all duration-500 shrink-0 bg-white/5 border-white/10"
      title="Watchdog idle"
    />
  </div>
</footer>
`;

exports[`WorkbenchFooter — snapshots should match snapshot for default state (clean, idle, no errors) 1`] = `
<footer
  class="h-6 border-t wb-outline wb-surface flex items-center justify-between px-4 z-50 shrink-0 transition-colors duration-500 select-none"
  role="contentinfo"
>
  <div
    class="flex items-center gap-3 text-[7px] font-mono uppercase tracking-[0.2em] text-foreground/20 min-w-0"
  >
    <span
      class="text-primary/40 font-black whitespace-nowrap"
    >
      Build v8.0.0
    </span>
    <span
      class="opacity-50 shrink-0"
    >
      //
    </span>
    <span
      class="whitespace-nowrap"
    >
      Aseptic Standard
    </span>
  </div>
  <div
    class="flex items-center justify-center gap-1 shrink-0"
  >
    <div
      class="flex items-center wb-surface border wb-outline rounded-xs p-0.5 pointer-events-auto h-5 bg-black/40"
    >
      <button
        aria-label="Orbital View (Ctrl+1)"
        aria-pressed="false"
        class="flex items-center justify-center rounded-xs transition-all w-5 h-4 wb-text-muted hover:wb-text  "
        title="Orbital View (Ctrl+1)"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-layers w-2.5 h-2.5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12.83 2.18a2 2 0 0 0-1.66 0L2.6 6.08a1 1 0 0 0 0 1.83l8.58 3.91a2 2 0 0 0 1.66 0l8.58-3.9a1 1 0 0 0 0-1.83z"
          />
          <path
            d="M2 12a1 1 0 0 0 .58.91l8.6 3.91a2 2 0 0 0 1.65 0l8.58-3.9A1 1 0 0 0 22 12"
          />
          <path
            d="M2 17a1 1 0 0 0 .58.91l8.6 3.91a2 2 0 0 0 1.65 0l8.58-3.9A1 1 0 0 0 22 17"
          />
        </svg>
      </button>
      <button
        aria-label="Virtual Rack (Ctrl+2)"
        aria-pressed="true"
        class="flex items-center justify-center rounded-xs transition-all w-5 h-4 bg-primary/20 text-primary border border-primary/20 "
        title="Virtual Rack (Ctrl+2)"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-cpu w-2.5 h-2.5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 20v2"
          />
          <path
            d="M12 2v2"
          />
          <path
            d="M17 20v2"
          />
          <path
            d="M17 2v2"
          />
          <path
            d="M2 12h2"
          />
          <path
            d="M2 17h2"
          />
          <path
            d="M2 7h2"
          />
          <path
            d="M20 12h2"
          />
          <path
            d="M20 17h2"
          />
          <path
            d="M20 7h2"
          />
          <path
            d="M7 20v2"
          />
          <path
            d="M7 2v2"
          />
          <rect
            height="16"
            rx="2"
            width="16"
            x="4"
            y="4"
          />
          <rect
            height="8"
            rx="1"
            width="8"
            x="8"
            y="8"
          />
        </svg>
      </button>
      <button
        aria-label="Source View (Ctrl+3)"
        aria-pressed="false"
        class="flex items-center justify-center rounded-xs transition-all w-5 h-4 wb-text-muted hover:wb-text  "
        title="Source View (Ctrl+3)"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-file-code w-2.5 h-2.5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M6 22a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h8a2.4 2.4 0 0 1 1.704.706l3.588 3.588A2.4 2.4 0 0 1 20 8v12a2 2 0 0 1-2 2z"
          />
          <path
            d="M14 2v5a1 1 0 0 0 1 1h5"
          />
          <path
            d="M10 12.5 8 15l2 2.5"
          />
          <path
            d="m14 12.5 2 2.5-2 2.5"
          />
        </svg>
      </button>
      <button
        aria-label="Timeline / History (Ctrl+4)"
        aria-pressed="false"
        class="flex items-center justify-center rounded-xs transition-all w-5 h-4 wb-text-muted hover:wb-text  "
        title="Timeline / History (Ctrl+4)"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-history w-2.5 h-2.5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3 12a9 9 0 1 0 9-9 9.75 9.75 0 0 0-6.74 2.74L3 8"
          />
          <path
            d="M3 3v5h5"
          />
          <path
            d="M12 7v5l4 2"
          />
        </svg>
      </button>
      <div
        class="w-px h-3 bg-white/10 mx-1"
      />
      <button
        aria-label="Toggle Split View (Vertical)"
        aria-pressed="false"
        class="flex items-center justify-center rounded-xs transition-all w-5 h-4 wb-text-muted hover:wb-text  "
        title="Toggle Split View (Vertical)"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-columns2 lucide-columns-2 w-2.5 h-2.5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            height="18"
            rx="2"
            width="18"
            x="3"
            y="3"
          />
          <path
            d="M12 3v18"
          />
        </svg>
      </button>
      <button
        aria-label="Toggle Mini Map (Ctrl+Shift+M)"
        aria-pressed="true"
        class="flex items-center justify-center rounded-xs transition-all w-5 h-4 bg-primary/20 text-primary border border-primary/20 "
        title="Toggle Mini Map (Ctrl+Shift+M)"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-map w-2.5 h-2.5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M14.106 5.553a2 2 0 0 0 1.788 0l3.659-1.83A1 1 0 0 1 21 4.619v12.764a1 1 0 0 1-.553.894l-4.553 2.277a2 2 0 0 1-1.788 0l-4.212-2.106a2 2 0 0 0-1.788 0l-3.659 1.83A1 1 0 0 1 3 19.381V6.618a1 1 0 0 1 .553-.894l4.553-2.277a2 2 0 0 1 1.788 0z"
          />
          <path
            d="M15 5.764v15"
          />
          <path
            d="M9 3.236v15"
          />
        </svg>
      </button>
    </div>
  </div>
  <div
    aria-label="Status indicators"
    aria-live="polite"
    class="flex items-center justify-end gap-3 text-[7px] font-mono uppercase tracking-[0.2em] text-foreground/20 min-w-0"
    role="status"
  >
    <button
      aria-label="No history"
      class="flex items-center gap-1.5 px-1.5 py-0.5 rounded-xs transition-all text-white/10 cursor-not-allowed"
      disabled=""
      title="No history"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-undo2 lucide-undo-2 w-2.5 h-2.5"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9 14 4 9l5-5"
        />
        <path
          d="M4 9h10.5a5.5 5.5 0 0 1 5.5 5.5a5.5 5.5 0 0 1-5.5 5.5H11"
        />
      </svg>
    </button>
    <div
      class="flex items-center gap-1 shrink-0 overflow-hidden"
    >
      <button
        aria-label="Undo (Ctrl+Z)"
        class="flex items-center gap-1 px-1 py-0.5 rounded-xs border text-[6px] font-mono font-bold tracking-wider shrink-0 transition-all border-white/5 bg-transparent text-white/10 cursor-not-allowed"
        disabled=""
        title="Undo (Ctrl+Z)"
      >
        <kbd
          class="text-[5px] px-0.5 py-px rounded-[1px] bg-white/10 text-white/40 font-mono font-black uppercase leading-none"
        >
          Ctrl
        </kbd>
        <span
          class="text-white/20"
        >
          +
        </span>
        <kbd
          class="text-[5px] px-0.5 py-px rounded-[1px] bg-white/10 text-white/40 font-mono font-black uppercase leading-none"
        >
          Z
        </kbd>
      </button>
      <button
        aria-label="Redo (Ctrl+Shift+Z)"
        class="hidden md:flex items-center gap-1 px-1 py-0.5 rounded-xs border text-[6px] font-mono font-bold tracking-wider shrink-0 transition-all border-white/5 bg-transparent text-white/10 cursor-not-allowed"
        disabled=""
        title="Redo (Ctrl+Shift+Z)"
      >
        <kbd
          class="text-[5px] px-0.5 py-px rounded-[1px] bg-white/10 text-white/40 font-mono font-black uppercase leading-none"
        >
          Ctrl
        </kbd>
        <span
          class="text-white/20"
        >
          +
        </span>
        <kbd
          class="text-[5px] px-0.5 py-px rounded-[1px] bg-white/10 text-white/40 font-mono font-black uppercase leading-none"
        >
          Shift
        </kbd>
        <span
          class="text-white/20"
        >
          +
        </span>
        <kbd
          class="text-[5px] px-0.5 py-px rounded-[1px] bg-white/10 text-white/40 font-mono font-black uppercase leading-none"
        >
          Z
        </kbd>
      </button>
      <button
        aria-label="Command Palette (Ctrl+K)"
        class="flex items-center gap-1 px-1 py-0.5 rounded-xs border text-[6px] font-mono font-bold tracking-wider shrink-0 transition-all border-white/10 bg-white/5 text-white/30 hover:bg-white/10 hover:text-white/50"
        title="Command Palette (Ctrl+K)"
      >
        <kbd
          class="text-[5px] px-0.5 py-px rounded-[1px] bg-white/10 text-white/40 font-mono font-black uppercase leading-none"
        >
          Ctrl
        </kbd>
        <span
          class="text-white/20"
        >
          +
        </span>
        <kbd
          class="text-[5px] px-0.5 py-px rounded-[1px] bg-white/10 text-white/40 font-mono font-black uppercase leading-none"
        >
          K
        </kbd>
      </button>
      <button
        aria-label="Save OmegaPack (Ctrl+S)"
        class="hidden md:flex items-center gap-1 px-1 py-0.5 rounded-xs border text-[6px] font-mono font-bold tracking-wider shrink-0 transition-all border-white/10 bg-white/5 text-white/30 hover:bg-white/10 hover:text-white/50"
        title="Save OmegaPack (Ctrl+S)"
      >
        <kbd
          class="text-[5px] px-0.5 py-px rounded-[1px] bg-white/10 text-white/40 font-mono font-black uppercase leading-none"
        >
          Ctrl
        </kbd>
        <span
          class="text-white/20"
        >
          +
        </span>
        <kbd
          class="text-[5px] px-0.5 py-px rounded-[1px] bg-white/10 text-white/40 font-mono font-black uppercase leading-none"
        >
          S
        </kbd>
      </button>
    </div>
    <span
      class="opacity-20 shrink-0"
    >
      |
    </span>
    <div
      class="flex items-center gap-1.5 text-emerald-400/60 whitespace-nowrap"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-save w-2.5 h-2.5"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M15.2 3a2 2 0 0 1 1.4.6l3.8 3.8a2 2 0 0 1 .6 1.4V19a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2z"
        />
        <path
          d="M17 21v-7a1 1 0 0 0-1-1H8a1 1 0 0 0-1 1v7"
        />
        <path
          d="M7 3v4a1 1 0 0 0 1 1h7"
        />
      </svg>
      <span
        class="font-black"
      >
        Saved
      </span>
    </div>
    <span
      class="opacity-30 shrink-0"
    >
      |
    </span>
    <div
      class="w-1.5 h-1.5 rounded-full border transition-all duration-500 shrink-0 bg-white/5 border-white/10"
      title="Watchdog idle"
    />
  </div>
</footer>
`;

exports[`WorkbenchFooter — snapshots should match snapshot for dirty state with errors and watchdog connected 1`] = `
<footer
  class="h-6 border-t wb-outline wb-surface flex items-center justify-between px-4 z-50 shrink-0 transition-colors duration-500 select-none"
  role="contentinfo"
>
  <div
    class="flex items-center gap-3 text-[7px] font-mono uppercase tracking-[0.2em] text-foreground/20 min-w-0"
  >
    <span
      class="text-primary/40 font-black whitespace-nowrap"
    >
      Build v8.0.0
    </span>
    <span
      class="opacity-50 shrink-0"
    >
      //
    </span>
    <div
      class="flex items-center gap-2 text-primary animate-in fade-in duration-500 whitespace-nowrap"
    >
      <span
        class="w-1 h-1 rounded-full bg-primary shadow-[0_0_5px_rgba(0,240,255,1)] animate-pulse"
      />
      <span
        class="font-black hidden md:inline"
      >
        WATCHDOG SYNC ACTIVE
      </span>
      <span
        class="opacity-40 italic hidden lg:inline"
      >
        @ 
        12:00:00
      </span>
    </div>
  </div>
  <div
    class="flex items-center justify-center gap-1 shrink-0"
  >
    <div
      class="flex items-center wb-surface border wb-outline rounded-xs p-0.5 pointer-events-auto h-5 bg-black/40"
    >
      <button
        aria-label="Orbital View (Ctrl+1)"
        aria-pressed="false"
        class="flex items-center justify-center rounded-xs transition-all w-5 h-4 wb-text-muted hover:wb-text  "
        title="Orbital View (Ctrl+1)"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-layers w-2.5 h-2.5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12.83 2.18a2 2 0 0 0-1.66 0L2.6 6.08a1 1 0 0 0 0 1.83l8.58 3.91a2 2 0 0 0 1.66 0l8.58-3.9a1 1 0 0 0 0-1.83z"
          />
          <path
            d="M2 12a1 1 0 0 0 .58.91l8.6 3.91a2 2 0 0 0 1.65 0l8.58-3.9A1 1 0 0 0 22 12"
          />
          <path
            d="M2 17a1 1 0 0 0 .58.91l8.6 3.91a2 2 0 0 0 1.65 0l8.58-3.9A1 1 0 0 0 22 17"
          />
        </svg>
      </button>
      <button
        aria-label="Virtual Rack (Ctrl+2)"
        aria-pressed="true"
        class="flex items-center justify-center rounded-xs transition-all w-5 h-4 bg-primary/20 text-primary border border-primary/20 "
        title="Virtual Rack (Ctrl+2)"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-cpu w-2.5 h-2.5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 20v2"
          />
          <path
            d="M12 2v2"
          />
          <path
            d="M17 20v2"
          />
          <path
            d="M17 2v2"
          />
          <path
            d="M2 12h2"
          />
          <path
            d="M2 17h2"
          />
          <path
            d="M2 7h2"
          />
          <path
            d="M20 12h2"
          />
          <path
            d="M20 17h2"
          />
          <path
            d="M20 7h2"
          />
          <path
            d="M7 20v2"
          />
          <path
            d="M7 2v2"
          />
          <rect
            height="16"
            rx="2"
            width="16"
            x="4"
            y="4"
          />
          <rect
            height="8"
            rx="1"
            width="8"
            x="8"
            y="8"
          />
        </svg>
      </button>
      <button
        aria-label="Source View (Ctrl+3)"
        aria-pressed="false"
        class="flex items-center justify-center rounded-xs transition-all w-5 h-4 wb-text-muted hover:wb-text  "
        title="Source View (Ctrl+3)"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-file-code w-2.5 h-2.5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M6 22a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h8a2.4 2.4 0 0 1 1.704.706l3.588 3.588A2.4 2.4 0 0 1 20 8v12a2 2 0 0 1-2 2z"
          />
          <path
            d="M14 2v5a1 1 0 0 0 1 1h5"
          />
          <path
            d="M10 12.5 8 15l2 2.5"
          />
          <path
            d="m14 12.5 2 2.5-2 2.5"
          />
        </svg>
      </button>
      <button
        aria-label="Timeline / History (Ctrl+4)"
        aria-pressed="false"
        class="flex items-center justify-center rounded-xs transition-all w-5 h-4 wb-text-muted hover:wb-text  "
        title="Timeline / History (Ctrl+4)"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-history w-2.5 h-2.5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3 12a9 9 0 1 0 9-9 9.75 9.75 0 0 0-6.74 2.74L3 8"
          />
          <path
            d="M3 3v5h5"
          />
          <path
            d="M12 7v5l4 2"
          />
        </svg>
      </button>
      <div
        class="w-px h-3 bg-white/10 mx-1"
      />
      <button
        aria-label="Toggle Split View (Vertical)"
        aria-pressed="false"
        class="flex items-center justify-center rounded-xs transition-all w-5 h-4 wb-text-muted hover:wb-text  "
        title="Toggle Split View (Vertical)"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-columns2 lucide-columns-2 w-2.5 h-2.5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            height="18"
            rx="2"
            width="18"
            x="3"
            y="3"
          />
          <path
            d="M12 3v18"
          />
        </svg>
      </button>
      <button
        aria-label="Toggle Mini Map (Ctrl+Shift+M)"
        aria-pressed="true"
        class="flex items-center justify-center rounded-xs transition-all w-5 h-4 bg-primary/20 text-primary border border-primary/20 "
        title="Toggle Mini Map (Ctrl+Shift+M)"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-map w-2.5 h-2.5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M14.106 5.553a2 2 0 0 0 1.788 0l3.659-1.83A1 1 0 0 1 21 4.619v12.764a1 1 0 0 1-.553.894l-4.553 2.277a2 2 0 0 1-1.788 0l-4.212-2.106a2 2 0 0 0-1.788 0l-3.659 1.83A1 1 0 0 1 3 19.381V6.618a1 1 0 0 1 .553-.894l4.553-2.277a2 2 0 0 1 1.788 0z"
          />
          <path
            d="M15 5.764v15"
          />
          <path
            d="M9 3.236v15"
          />
        </svg>
      </button>
    </div>
  </div>
  <div
    aria-label="Status indicators"
    aria-live="polite"
    class="flex items-center justify-end gap-3 text-[7px] font-mono uppercase tracking-[0.2em] text-foreground/20 min-w-0"
    role="status"
  >
    <button
      aria-label="No history"
      class="flex items-center gap-1.5 px-1.5 py-0.5 rounded-xs transition-all text-white/10 cursor-not-allowed"
      disabled=""
      title="No history"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-undo2 lucide-undo-2 w-2.5 h-2.5"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9 14 4 9l5-5"
        />
        <path
          d="M4 9h10.5a5.5 5.5 0 0 1 5.5 5.5a5.5 5.5 0 0 1-5.5 5.5H11"
        />
      </svg>
    </button>
    <div
      class="flex items-center gap-1 shrink-0 overflow-hidden"
    >
      <button
        aria-label="Undo (Ctrl+Z)"
        class="flex items-center gap-1 px-1 py-0.5 rounded-xs border text-[6px] font-mono font-bold tracking-wider shrink-0 transition-all border-white/5 bg-transparent text-white/10 cursor-not-allowed"
        disabled=""
        title="Undo (Ctrl+Z)"
      >
        <kbd
          class="text-[5px] px-0.5 py-px rounded-[1px] bg-white/10 text-white/40 font-mono font-black uppercase leading-none"
        >
          Ctrl
        </kbd>
        <span
          class="text-white/20"
        >
          +
        </span>
        <kbd
          class="text-[5px] px-0.5 py-px rounded-[1px] bg-white/10 text-white/40 font-mono font-black uppercase leading-none"
        >
          Z
        </kbd>
      </button>
      <button
        aria-label="Redo (Ctrl+Shift+Z)"
        class="hidden md:flex items-center gap-1 px-1 py-0.5 rounded-xs border text-[6px] font-mono font-bold tracking-wider shrink-0 transition-all border-white/5 bg-transparent text-white/10 cursor-not-allowed"
        disabled=""
        title="Redo (Ctrl+Shift+Z)"
      >
        <kbd
          class="text-[5px] px-0.5 py-px rounded-[1px] bg-white/10 text-white/40 font-mono font-black uppercase leading-none"
        >
          Ctrl
        </kbd>
        <span
          class="text-white/20"
        >
          +
        </span>
        <kbd
          class="text-[5px] px-0.5 py-px rounded-[1px] bg-white/10 text-white/40 font-mono font-black uppercase leading-none"
        >
          Shift
        </kbd>
        <span
          class="text-white/20"
        >
          +
        </span>
        <kbd
          class="text-[5px] px-0.5 py-px rounded-[1px] bg-white/10 text-white/40 font-mono font-black uppercase leading-none"
        >
          Z
        </kbd>
      </button>
      <button
        aria-label="Command Palette (Ctrl+K)"
        class="flex items-center gap-1 px-1 py-0.5 rounded-xs border text-[6px] font-mono font-bold tracking-wider shrink-0 transition-all border-white/10 bg-white/5 text-white/30 hover:bg-white/10 hover:text-white/50"
        title="Command Palette (Ctrl+K)"
      >
        <kbd
          class="text-[5px] px-0.5 py-px rounded-[1px] bg-white/10 text-white/40 font-mono font-black uppercase leading-none"
        >
          Ctrl
        </kbd>
        <span
          class="text-white/20"
        >
          +
        </span>
        <kbd
          class="text-[5px] px-0.5 py-px rounded-[1px] bg-white/10 text-white/40 font-mono font-black uppercase leading-none"
        >
          K
        </kbd>
      </button>
      <button
        aria-label="Save OmegaPack (Ctrl+S)"
        class="hidden md:flex items-center gap-1 px-1 py-0.5 rounded-xs border text-[6px] font-mono font-bold tracking-wider shrink-0 transition-all border-white/10 bg-white/5 text-white/30 hover:bg-white/10 hover:text-white/50"
        title="Save OmegaPack (Ctrl+S)"
      >
        <kbd
          class="text-[5px] px-0.5 py-px rounded-[1px] bg-white/10 text-white/40 font-mono font-black uppercase leading-none"
        >
          Ctrl
        </kbd>
        <span
          class="text-white/20"
        >
          +
        </span>
        <kbd
          class="text-[5px] px-0.5 py-px rounded-[1px] bg-white/10 text-white/40 font-mono font-black uppercase leading-none"
        >
          S
        </kbd>
      </button>
    </div>
    <span
      class="opacity-20 shrink-0"
    >
      |
    </span>
    <div
      class="flex items-center gap-1.5 text-amber-400/80 animate-in fade-in duration-300 whitespace-nowrap"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-circle w-2 h-2 fill-amber-400/60"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
      </svg>
      <span
        class="font-black"
      >
        Modified
      </span>
    </div>
    <span
      class="opacity-30 shrink-0"
    >
      |
    </span>
    <div
      class="flex items-center gap-1.5 whitespace-nowrap"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-triangle-alert w-2 h-2 text-red-400/80"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"
        />
        <path
          d="M12 9v4"
        />
        <path
          d="M12 17h.01"
        />
      </svg>
      <span
        class="text-red-400/80 font-black"
      >
        2
         error
        s
      </span>
      <span
        class="opacity-30"
      >
        /
      </span>
      <span
        class="text-amber-400/60 font-black"
      >
        1
         warning
      </span>
    </div>
    <span
      class="opacity-30 shrink-0"
    >
      |
    </span>
    <div
      class="w-1.5 h-1.5 rounded-full border transition-all duration-500 shrink-0 bg-green-400/40 border-green-400/60 shadow-[0_0_6px_rgba(34,197,94,0.3)]"
      title="Watchdog connected"
    />
  </div>
</footer>
`;

exports[`WorkbenchFooter — snapshots should match snapshot for error watchdog with marquee tool 1`] = `
<footer
  class="h-6 border-t wb-outline wb-surface flex items-center justify-between px-4 z-50 shrink-0 transition-colors duration-500 select-none"
  role="contentinfo"
>
  <div
    class="flex items-center gap-3 text-[7px] font-mono uppercase tracking-[0.2em] text-foreground/20 min-w-0"
  >
    <span
      class="text-primary/40 font-black whitespace-nowrap"
    >
      Build v8.0.0
    </span>
    <span
      class="opacity-50 shrink-0"
    >
      //
    </span>
    <div
      class="flex items-center gap-2 text-red-400/60 whitespace-nowrap"
    >
      <span
        class="w-1 h-1 rounded-full bg-red-400/60"
      />
      <span
        class="font-black hidden md:inline"
      >
        WATCHDOG OFFLINE
      </span>
    </div>
    <span
      class="opacity-50 shrink-0"
    >
      //
    </span>
    <div
      class="flex items-center gap-1.5 text-primary border border-primary/20 bg-primary/5 rounded-xs px-1.5 py-0.5 shadow-[0_0_6px_rgba(var(--primary-rgb),0.1)] whitespace-nowrap"
    >
      <span
        class="text-[6px] font-black uppercase tracking-widest"
      >
        [M] Marquee
      </span>
    </div>
  </div>
  <div
    class="flex items-center justify-center gap-1 shrink-0"
  >
    <div
      class="flex items-center wb-surface border wb-outline rounded-xs p-0.5 pointer-events-auto h-5 bg-black/40"
    >
      <button
        aria-label="Orbital View (Ctrl+1)"
        aria-pressed="false"
        class="flex items-center justify-center rounded-xs transition-all w-5 h-4 wb-text-muted hover:wb-text  "
        title="Orbital View (Ctrl+1)"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-layers w-2.5 h-2.5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12.83 2.18a2 2 0 0 0-1.66 0L2.6 6.08a1 1 0 0 0 0 1.83l8.58 3.91a2 2 0 0 0 1.66 0l8.58-3.9a1 1 0 0 0 0-1.83z"
          />
          <path
            d="M2 12a1 1 0 0 0 .58.91l8.6 3.91a2 2 0 0 0 1.65 0l8.58-3.9A1 1 0 0 0 22 12"
          />
          <path
            d="M2 17a1 1 0 0 0 .58.91l8.6 3.91a2 2 0 0 0 1.65 0l8.58-3.9A1 1 0 0 0 22 17"
          />
        </svg>
      </button>
      <button
        aria-label="Virtual Rack (Ctrl+2)"
        aria-pressed="true"
        class="flex items-center justify-center rounded-xs transition-all w-5 h-4 bg-primary/20 text-primary border border-primary/20 "
        title="Virtual Rack (Ctrl+2)"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-cpu w-2.5 h-2.5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 20v2"
          />
          <path
            d="M12 2v2"
          />
          <path
            d="M17 20v2"
          />
          <path
            d="M17 2v2"
          />
          <path
            d="M2 12h2"
          />
          <path
            d="M2 17h2"
          />
          <path
            d="M2 7h2"
          />
          <path
            d="M20 12h2"
          />
          <path
            d="M20 17h2"
          />
          <path
            d="M20 7h2"
          />
          <path
            d="M7 20v2"
          />
          <path
            d="M7 2v2"
          />
          <rect
            height="16"
            rx="2"
            width="16"
            x="4"
            y="4"
          />
          <rect
            height="8"
            rx="1"
            width="8"
            x="8"
            y="8"
          />
        </svg>
      </button>
      <button
        aria-label="Source View (Ctrl+3)"
        aria-pressed="false"
        class="flex items-center justify-center rounded-xs transition-all w-5 h-4 wb-text-muted hover:wb-text  "
        title="Source View (Ctrl+3)"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-file-code w-2.5 h-2.5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M6 22a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h8a2.4 2.4 0 0 1 1.704.706l3.588 3.588A2.4 2.4 0 0 1 20 8v12a2 2 0 0 1-2 2z"
          />
          <path
            d="M14 2v5a1 1 0 0 0 1 1h5"
          />
          <path
            d="M10 12.5 8 15l2 2.5"
          />
          <path
            d="m14 12.5 2 2.5-2 2.5"
          />
        </svg>
      </button>
      <button
        aria-label="Timeline / History (Ctrl+4)"
        aria-pressed="false"
        class="flex items-center justify-center rounded-xs transition-all w-5 h-4 wb-text-muted hover:wb-text  "
        title="Timeline / History (Ctrl+4)"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-history w-2.5 h-2.5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3 12a9 9 0 1 0 9-9 9.75 9.75 0 0 0-6.74 2.74L3 8"
          />
          <path
            d="M3 3v5h5"
          />
          <path
            d="M12 7v5l4 2"
          />
        </svg>
      </button>
      <div
        class="w-px h-3 bg-white/10 mx-1"
      />
      <button
        aria-label="Toggle Split View (Vertical)"
        aria-pressed="false"
        class="flex items-center justify-center rounded-xs transition-all w-5 h-4 wb-text-muted hover:wb-text  "
        title="Toggle Split View (Vertical)"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-columns2 lucide-columns-2 w-2.5 h-2.5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            height="18"
            rx="2"
            width="18"
            x="3"
            y="3"
          />
          <path
            d="M12 3v18"
          />
        </svg>
      </button>
      <button
        aria-label="Toggle Mini Map (Ctrl+Shift+M)"
        aria-pressed="true"
        class="flex items-center justify-center rounded-xs transition-all w-5 h-4 bg-primary/20 text-primary border border-primary/20 "
        title="Toggle Mini Map (Ctrl+Shift+M)"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-map w-2.5 h-2.5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M14.106 5.553a2 2 0 0 0 1.788 0l3.659-1.83A1 1 0 0 1 21 4.619v12.764a1 1 0 0 1-.553.894l-4.553 2.277a2 2 0 0 1-1.788 0l-4.212-2.106a2 2 0 0 0-1.788 0l-3.659 1.83A1 1 0 0 1 3 19.381V6.618a1 1 0 0 1 .553-.894l4.553-2.277a2 2 0 0 1 1.788 0z"
          />
          <path
            d="M15 5.764v15"
          />
          <path
            d="M9 3.236v15"
          />
        </svg>
      </button>
    </div>
  </div>
  <div
    aria-label="Status indicators"
    aria-live="polite"
    class="flex items-center justify-end gap-3 text-[7px] font-mono uppercase tracking-[0.2em] text-foreground/20 min-w-0"
    role="status"
  >
    <button
      aria-label="No history"
      class="flex items-center gap-1.5 px-1.5 py-0.5 rounded-xs transition-all text-white/10 cursor-not-allowed"
      disabled=""
      title="No history"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-undo2 lucide-undo-2 w-2.5 h-2.5"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9 14 4 9l5-5"
        />
        <path
          d="M4 9h10.5a5.5 5.5 0 0 1 5.5 5.5a5.5 5.5 0 0 1-5.5 5.5H11"
        />
      </svg>
    </button>
    <div
      class="flex items-center gap-1 shrink-0 overflow-hidden"
    >
      <button
        aria-label="Undo (Ctrl+Z)"
        class="flex items-center gap-1 px-1 py-0.5 rounded-xs border text-[6px] font-mono font-bold tracking-wider shrink-0 transition-all border-white/5 bg-transparent text-white/10 cursor-not-allowed"
        disabled=""
        title="Undo (Ctrl+Z)"
      >
        <kbd
          class="text-[5px] px-0.5 py-px rounded-[1px] bg-white/10 text-white/40 font-mono font-black uppercase leading-none"
        >
          Ctrl
        </kbd>
        <span
          class="text-white/20"
        >
          +
        </span>
        <kbd
          class="text-[5px] px-0.5 py-px rounded-[1px] bg-white/10 text-white/40 font-mono font-black uppercase leading-none"
        >
          Z
        </kbd>
      </button>
      <button
        aria-label="Redo (Ctrl+Shift+Z)"
        class="hidden md:flex items-center gap-1 px-1 py-0.5 rounded-xs border text-[6px] font-mono font-bold tracking-wider shrink-0 transition-all border-white/5 bg-transparent text-white/10 cursor-not-allowed"
        disabled=""
        title="Redo (Ctrl+Shift+Z)"
      >
        <kbd
          class="text-[5px] px-0.5 py-px rounded-[1px] bg-white/10 text-white/40 font-mono font-black uppercase leading-none"
        >
          Ctrl
        </kbd>
        <span
          class="text-white/20"
        >
          +
        </span>
        <kbd
          class="text-[5px] px-0.5 py-px rounded-[1px] bg-white/10 text-white/40 font-mono font-black uppercase leading-none"
        >
          Shift
        </kbd>
        <span
          class="text-white/20"
        >
          +
        </span>
        <kbd
          class="text-[5px] px-0.5 py-px rounded-[1px] bg-white/10 text-white/40 font-mono font-black uppercase leading-none"
        >
          Z
        </kbd>
      </button>
      <button
        aria-label="Command Palette (Ctrl+K)"
        class="flex items-center gap-1 px-1 py-0.5 rounded-xs border text-[6px] font-mono font-bold tracking-wider shrink-0 transition-all border-white/10 bg-white/5 text-white/30 hover:bg-white/10 hover:text-white/50"
        title="Command Palette (Ctrl+K)"
      >
        <kbd
          class="text-[5px] px-0.5 py-px rounded-[1px] bg-white/10 text-white/40 font-mono font-black uppercase leading-none"
        >
          Ctrl
        </kbd>
        <span
          class="text-white/20"
        >
          +
        </span>
        <kbd
          class="text-[5px] px-0.5 py-px rounded-[1px] bg-white/10 text-white/40 font-mono font-black uppercase leading-none"
        >
          K
        </kbd>
      </button>
      <button
        aria-label="Save OmegaPack (Ctrl+S)"
        class="hidden md:flex items-center gap-1 px-1 py-0.5 rounded-xs border text-[6px] font-mono font-bold tracking-wider shrink-0 transition-all border-white/10 bg-white/5 text-white/30 hover:bg-white/10 hover:text-white/50"
        title="Save OmegaPack (Ctrl+S)"
      >
        <kbd
          class="text-[5px] px-0.5 py-px rounded-[1px] bg-white/10 text-white/40 font-mono font-black uppercase leading-none"
        >
          Ctrl
        </kbd>
        <span
          class="text-white/20"
        >
          +
        </span>
        <kbd
          class="text-[5px] px-0.5 py-px rounded-[1px] bg-white/10 text-white/40 font-mono font-black uppercase leading-none"
        >
          S
        </kbd>
      </button>
    </div>
    <span
      class="opacity-20 shrink-0"
    >
      |
    </span>
    <div
      class="flex items-center gap-1.5 text-amber-400/80 animate-in fade-in duration-300 whitespace-nowrap"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-circle w-2 h-2 fill-amber-400/60"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
      </svg>
      <span
        class="font-black"
      >
        Modified
      </span>
    </div>
    <span
      class="opacity-30 shrink-0"
    >
      |
    </span>
    <div
      class="w-1.5 h-1.5 rounded-full border transition-all duration-500 shrink-0 bg-red-400/30 border-red-400/50"
      title="Watchdog error"
    />
  </div>
</footer>
`;

exports[`WorkbenchFooter — snapshots should match snapshot for saved with timestamp, no errors, watchdog idle 1`] = `
<footer
  class="h-6 border-t wb-outline wb-surface flex items-center justify-between px-4 z-50 shrink-0 transition-colors duration-500 select-none"
  role="contentinfo"
>
  <div
    class="flex items-center gap-3 text-[7px] font-mono uppercase tracking-[0.2em] text-foreground/20 min-w-0"
  >
    <span
      class="text-primary/40 font-black whitespace-nowrap"
    >
      Build v8.0.0
    </span>
    <span
      class="opacity-50 shrink-0"
    >
      //
    </span>
    <span
      class="whitespace-nowrap"
    >
      Aseptic Standard
    </span>
  </div>
  <div
    class="flex items-center justify-center gap-1 shrink-0"
  >
    <div
      class="flex items-center wb-surface border wb-outline rounded-xs p-0.5 pointer-events-auto h-5 bg-black/40"
    >
      <button
        aria-label="Orbital View (Ctrl+1)"
        aria-pressed="false"
        class="flex items-center justify-center rounded-xs transition-all w-5 h-4 wb-text-muted hover:wb-text  "
        title="Orbital View (Ctrl+1)"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-layers w-2.5 h-2.5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12.83 2.18a2 2 0 0 0-1.66 0L2.6 6.08a1 1 0 0 0 0 1.83l8.58 3.91a2 2 0 0 0 1.66 0l8.58-3.9a1 1 0 0 0 0-1.83z"
          />
          <path
            d="M2 12a1 1 0 0 0 .58.91l8.6 3.91a2 2 0 0 0 1.65 0l8.58-3.9A1 1 0 0 0 22 12"
          />
          <path
            d="M2 17a1 1 0 0 0 .58.91l8.6 3.91a2 2 0 0 0 1.65 0l8.58-3.9A1 1 0 0 0 22 17"
          />
        </svg>
      </button>
      <button
        aria-label="Virtual Rack (Ctrl+2)"
        aria-pressed="true"
        class="flex items-center justify-center rounded-xs transition-all w-5 h-4 bg-primary/20 text-primary border border-primary/20 "
        title="Virtual Rack (Ctrl+2)"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-cpu w-2.5 h-2.5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 20v2"
          />
          <path
            d="M12 2v2"
          />
          <path
            d="M17 20v2"
          />
          <path
            d="M17 2v2"
          />
          <path
            d="M2 12h2"
          />
          <path
            d="M2 17h2"
          />
          <path
            d="M2 7h2"
          />
          <path
            d="M20 12h2"
          />
          <path
            d="M20 17h2"
          />
          <path
            d="M20 7h2"
          />
          <path
            d="M7 20v2"
          />
          <path
            d="M7 2v2"
          />
          <rect
            height="16"
            rx="2"
            width="16"
            x="4"
            y="4"
          />
          <rect
            height="8"
            rx="1"
            width="8"
            x="8"
            y="8"
          />
        </svg>
      </button>
      <button
        aria-label="Source View (Ctrl+3)"
        aria-pressed="false"
        class="flex items-center justify-center rounded-xs transition-all w-5 h-4 wb-text-muted hover:wb-text  "
        title="Source View (Ctrl+3)"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-file-code w-2.5 h-2.5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M6 22a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h8a2.4 2.4 0 0 1 1.704.706l3.588 3.588A2.4 2.4 0 0 1 20 8v12a2 2 0 0 1-2 2z"
          />
          <path
            d="M14 2v5a1 1 0 0 0 1 1h5"
          />
          <path
            d="M10 12.5 8 15l2 2.5"
          />
          <path
            d="m14 12.5 2 2.5-2 2.5"
          />
        </svg>
      </button>
      <button
        aria-label="Timeline / History (Ctrl+4)"
        aria-pressed="false"
        class="flex items-center justify-center rounded-xs transition-all w-5 h-4 wb-text-muted hover:wb-text  "
        title="Timeline / History (Ctrl+4)"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-history w-2.5 h-2.5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3 12a9 9 0 1 0 9-9 9.75 9.75 0 0 0-6.74 2.74L3 8"
          />
          <path
            d="M3 3v5h5"
          />
          <path
            d="M12 7v5l4 2"
          />
        </svg>
      </button>
      <div
        class="w-px h-3 bg-white/10 mx-1"
      />
      <button
        aria-label="Toggle Split View (Vertical)"
        aria-pressed="false"
        class="flex items-center justify-center rounded-xs transition-all w-5 h-4 wb-text-muted hover:wb-text  "
        title="Toggle Split View (Vertical)"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-columns2 lucide-columns-2 w-2.5 h-2.5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            height="18"
            rx="2"
            width="18"
            x="3"
            y="3"
          />
          <path
            d="M12 3v18"
          />
        </svg>
      </button>
      <button
        aria-label="Toggle Mini Map (Ctrl+Shift+M)"
        aria-pressed="true"
        class="flex items-center justify-center rounded-xs transition-all w-5 h-4 bg-primary/20 text-primary border border-primary/20 "
        title="Toggle Mini Map (Ctrl+Shift+M)"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-map w-2.5 h-2.5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M14.106 5.553a2 2 0 0 0 1.788 0l3.659-1.83A1 1 0 0 1 21 4.619v12.764a1 1 0 0 1-.553.894l-4.553 2.277a2 2 0 0 1-1.788 0l-4.212-2.106a2 2 0 0 0-1.788 0l-3.659 1.83A1 1 0 0 1 3 19.381V6.618a1 1 0 0 1 .553-.894l4.553-2.277a2 2 0 0 1 1.788 0z"
          />
          <path
            d="M15 5.764v15"
          />
          <path
            d="M9 3.236v15"
          />
        </svg>
      </button>
    </div>
  </div>
  <div
    aria-label="Status indicators"
    aria-live="polite"
    class="flex items-center justify-end gap-3 text-[7px] font-mono uppercase tracking-[0.2em] text-foreground/20 min-w-0"
    role="status"
  >
    <button
      aria-label="No history"
      class="flex items-center gap-1.5 px-1.5 py-0.5 rounded-xs transition-all text-white/10 cursor-not-allowed"
      disabled=""
      title="No history"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-undo2 lucide-undo-2 w-2.5 h-2.5"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9 14 4 9l5-5"
        />
        <path
          d="M4 9h10.5a5.5 5.5 0 0 1 5.5 5.5a5.5 5.5 0 0 1-5.5 5.5H11"
        />
      </svg>
    </button>
    <div
      class="flex items-center gap-1 shrink-0 overflow-hidden"
    >
      <button
        aria-label="Undo (Ctrl+Z)"
        class="flex items-center gap-1 px-1 py-0.5 rounded-xs border text-[6px] font-mono font-bold tracking-wider shrink-0 transition-all border-white/5 bg-transparent text-white/10 cursor-not-allowed"
        disabled=""
        title="Undo (Ctrl+Z)"
      >
        <kbd
          class="text-[5px] px-0.5 py-px rounded-[1px] bg-white/10 text-white/40 font-mono font-black uppercase leading-none"
        >
          Ctrl
        </kbd>
        <span
          class="text-white/20"
        >
          +
        </span>
        <kbd
          class="text-[5px] px-0.5 py-px rounded-[1px] bg-white/10 text-white/40 font-mono font-black uppercase leading-none"
        >
          Z
        </kbd>
      </button>
      <button
        aria-label="Redo (Ctrl+Shift+Z)"
        class="hidden md:flex items-center gap-1 px-1 py-0.5 rounded-xs border text-[6px] font-mono font-bold tracking-wider shrink-0 transition-all border-white/5 bg-transparent text-white/10 cursor-not-allowed"
        disabled=""
        title="Redo (Ctrl+Shift+Z)"
      >
        <kbd
          class="text-[5px] px-0.5 py-px rounded-[1px] bg-white/10 text-white/40 font-mono font-black uppercase leading-none"
        >
          Ctrl
        </kbd>
        <span
          class="text-white/20"
        >
          +
        </span>
        <kbd
          class="text-[5px] px-0.5 py-px rounded-[1px] bg-white/10 text-white/40 font-mono font-black uppercase leading-none"
        >
          Shift
        </kbd>
        <span
          class="text-white/20"
        >
          +
        </span>
        <kbd
          class="text-[5px] px-0.5 py-px rounded-[1px] bg-white/10 text-white/40 font-mono font-black uppercase leading-none"
        >
          Z
        </kbd>
      </button>
      <button
        aria-label="Command Palette (Ctrl+K)"
        class="flex items-center gap-1 px-1 py-0.5 rounded-xs border text-[6px] font-mono font-bold tracking-wider shrink-0 transition-all border-white/10 bg-white/5 text-white/30 hover:bg-white/10 hover:text-white/50"
        title="Command Palette (Ctrl+K)"
      >
        <kbd
          class="text-[5px] px-0.5 py-px rounded-[1px] bg-white/10 text-white/40 font-mono font-black uppercase leading-none"
        >
          Ctrl
        </kbd>
        <span
          class="text-white/20"
        >
          +
        </span>
        <kbd
          class="text-[5px] px-0.5 py-px rounded-[1px] bg-white/10 text-white/40 font-mono font-black uppercase leading-none"
        >
          K
        </kbd>
      </button>
      <button
        aria-label="Save OmegaPack (Ctrl+S)"
        class="hidden md:flex items-center gap-1 px-1 py-0.5 rounded-xs border text-[6px] font-mono font-bold tracking-wider shrink-0 transition-all border-white/10 bg-white/5 text-white/30 hover:bg-white/10 hover:text-white/50"
        title="Save OmegaPack (Ctrl+S)"
      >
        <kbd
          class="text-[5px] px-0.5 py-px rounded-[1px] bg-white/10 text-white/40 font-mono font-black uppercase leading-none"
        >
          Ctrl
        </kbd>
        <span
          class="text-white/20"
        >
          +
        </span>
        <kbd
          class="text-[5px] px-0.5 py-px rounded-[1px] bg-white/10 text-white/40 font-mono font-black uppercase leading-none"
        >
          S
        </kbd>
      </button>
    </div>
    <span
      class="opacity-20 shrink-0"
    >
      |
    </span>
    <div
      class="flex items-center gap-1.5 text-emerald-400/60 whitespace-nowrap"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-save w-2.5 h-2.5"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M15.2 3a2 2 0 0 1 1.4.6l3.8 3.8a2 2 0 0 1 .6 1.4V19a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2z"
        />
        <path
          d="M17 21v-7a1 1 0 0 0-1-1H8a1 1 0 0 0-1 1v7"
        />
        <path
          d="M7 3v4a1 1 0 0 0 1 1h7"
        />
      </svg>
      <span
        class="font-black"
      >
        Saved
      </span>
      <span
        class="opacity-40 italic hidden lg:inline"
      >
        @ 
        10:15:30
      </span>
    </div>
    <span
      class="opacity-30 shrink-0"
    >
      |
    </span>
    <div
      class="w-1.5 h-1.5 rounded-full border transition-all duration-500 shrink-0 bg-white/5 border-white/10"
      title="Watchdog idle"
    />
  </div>
</footer>
`;
